# CEFP_Disk

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  test.py
api/: __init__.py  extention.py  utils.py
api/auth/: signin.py  signup.py  two_factor.py
api/file/: delete.py  download.py  info.py  keys.py  update.py  upload.py
database/: __init__.py  data.json  jsonDB.py  test.json
instance/: users.sqlite3
keys/: jwt-secret.key
models/: __init__.py  file.py  user.py
template/: index.html
template/assets/: index-BRBpzG4v.js  index-CAbgla8O.js  index-DeKa6t6L.css  index-DxZc-CVA.css
tests/: test_api_auth.py  test_api_file.py
