[project]
name = "cefp-re"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=4.3.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.11.0",
    "flask-testing>=0.8.1",
    "pillow>=11.2.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
]
